# datavault4sqlmesh

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json
datavault4sqlmesh/: __init__.py  config.py
datavault4sqlmesh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
datavault4sqlmesh/models/: __init__.py  _utils.py  hub.py  link.py  satellite.py  satellite_v1.py  stage.py
datavault4sqlmesh/schema/: __init__.py  inference.py
docs/01_model-functions/: _category_.json
docs/01_model-functions/01_documentation/: 01_documentation.md
docs/01_model-functions/02_staging/: 02_stage-model.md  _category_.json
docs/01_model-functions/03_hubs/: 03_hub-model.md  _category_.json
docs/01_model-functions/04_links/: 04_link-model.md  _category_.json
docs/01_model-functions/05_satellites/: 05_satellite-model.md  06_satellite-v1-model.md  _category_.json
tests/: conftest.py  test_hub.py  test_link.py  test_satellite.py  test_satellite_v1.py  test_schema_inference.py  test_stage.py
tests/integration/: conftest.py  helpers.py  test_incremental.py
