[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["datavault4sqlmesh*"]

[project]
name = "datavault4sqlmesh"
version = "0.1.0"
description = "Data Vault 2 SQLMesh model factories built on datavault4sqlglot"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "Scalefree International GmbH", email = "info@scalefree.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "datavault4sqlglot",
    "sqlmesh",
    "sqlglot",
    "pydantic",
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest"]
integration = ["pytest", "psycopg2-binary"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a running Postgres instance (localhost:5432, dev/dev/dev)",
]

[project.urls]
Homepage = "https://scalefree.com"
Repository = "https://github.com/ScalefreeCOM/datavault4sqlmesh"
"Bug Tracker" = "https://github.com/ScalefreeCOM/datavault4sqlmesh/issues"
